# detection_and_tracking_rau_project

./: CMakeLists.txt  README.md  conanfile.txt
src/: camera.cpp  camera.h  detector.cpp  detector.h  main.cpp  main_window.cpp  main_window.h  tracker.cpp  tracker.h  utils.cpp  utils.h
